--- a/style.css
+++ b/style.css
@@ -88,10 +88,14 @@ header {
 }
 header .logo img {
   width: 150px;
+  opacity: 1;
 }
 header .logo img:hover {
-  width: 150px;
   transform: rotate(15deg);
+}
+header .links {
+  display: flex;
+  transform: translateX(0px);
 }
 header .links a {
   padding: 10px;
@@ -101,6 +105,61 @@ header .links a:hover {
   position: relative;
   padding: 10px 20px;
   color: var(--main-color);
+}
+header .menu ,  header .menu input {
+  display: none;
+}
+header .menu {
+  position: absolute;
+  top: 45px;
+  right: 20px;
+  z-index: 5;
+}
+
+header .menu .lines {
+  display: flex;
+  cursor: pointer;
+}
+
+header .menu .lines .svg {
+  width: 40px;
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+header .menu .lines .svg .line {
+  fill: none;
+  stroke: white;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+header .menu .lines .svg .top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+header .menu .lines input:checked + .svg {
+  transform: rotate(-45deg);
+}
+
+header .menu .lines input:checked + .svg .top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
+}
+@media only screen and (max-width: 500px) {
+  header .menu {
+    display: block;
+  }
+  header .links {
+    transform: translateX(350px);
+    position: absolute;
+    right: 50px;
+  }
+  header .logo img {
+    width: 100px;
+  }
 }
 /* section one */
 .secone {
@@ -232,6 +291,9 @@ header .links a:hover {
 /* ---------------- section scroll products ---------------- */
 .logoframe {
   scrollbar-width: none;
+}
+.scrollprod{
+  overflow-x: hidden;
 }
 .scrollprod .logoframe {
   height: 450px;
