--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ a {
 span {
   color: var(--main-color);
 }
+section {
+  overflow-x: hidden;
+}
 .power {
   font-size: 15px;
 }
@@ -85,6 +88,7 @@ header {
   align-items: center;
   justify-content: space-between;
   font-size: 25px;
+  overflow-x: hidden;
 }
 header .logo img {
   width: 150px;
@@ -106,7 +110,8 @@ header .links a:hover {
   padding: 10px 20px;
   color: var(--main-color);
 }
-header .menu ,  header .menu input {
+header .menu,
+header .menu input {
   display: none;
 }
 header .menu {
@@ -278,6 +283,9 @@ header .menu .lines input:checked + .svg .top-bottom {
   font-size: 25px;
   border-radius: 100px;
   margin: 50px 50px;
+  font-family: 'IBM';
+  border: none;
+  cursor: pointer;
 }
 .mainbut:hover {
   background-color: var(--tx-color);
@@ -292,7 +300,7 @@ header .menu .lines input:checked + .svg .top-bottom {
 .logoframe {
   scrollbar-width: none;
 }
-.scrollprod{
+.scrollprod {
   overflow-x: hidden;
 }
 .scrollprod .logoframe {
@@ -382,3 +390,37 @@ footer .prandname {
 footer .links img {
   width: 35px;
 }
+/* ----------------------------- product padge --------------------------- */
+.oneproduct .product {
+  width: 100%;
+  margin: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.oneproduct .product img {
+  width: 100%;
+  max-width: 350px;
+  margin-bottom: -20px;
+}
+.oneproduct .product .detals {
+  padding: 50px;
+  text-align: center;
+  min-width: 300px;
+}
+.oneproduct .product .detals #product-description {
+  color: var(--sac-color);
+}
+.oneproduct .product .detals .mainbut {
+  font-size: 20px;
+  margin: 15px 0;
+}
+@media  (max-width: 770px) {
+  .oneproduct .product {
+    flex-direction: column;
+  }
+  .oneproduct .product img {
+    width: 80%;
+  }
+}
+
