--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  transition: all 0.5s ease-in-out;
+  transition: 0.1s;
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -28,10 +28,6 @@ body {
   background-color: var(--bg-color);
   color: var(--tx-color);
   overflow-x: hidden;
-}
-img {
-  max-width: 400px;
-  border-radius: 20px;
 }
 a {
   color: var(--tx-color);
@@ -58,6 +54,7 @@ section {
   transform: translateY(0px);
   z-index: 1000;
   border-radius: 0 0 100px 100px;
+  transition: 0.7s;
 }
 #preloader img {
   animation: preload 1s infinite;
@@ -81,9 +78,28 @@ section {
   bottom: 30px;
   right: 41%;
 }
-/* header */
+.mainbut {
+  background-color: var(--main-color);
+  color: var(--sac-color);
+  padding: 10px 50px;
+  font-size: 25px;
+  border-radius: 100px;
+  margin: 50px 50px;
+  font-family: "IBM";
+  border: none;
+  cursor: pointer;
+}
+.mainbut:hover {
+  background-color: var(--tx-color);
+  color: var(--main-color);
+  padding: 10px 50px;
+  font-size: 25px;
+  border-radius: 100px;
+  margin: 50px 50px;
+}
+/* -------------------- header -------------------- */
 header {
-  padding: 10px 30px;
+  padding: 10px 3%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -93,77 +109,57 @@ header {
 header .logo img {
   width: 150px;
   opacity: 1;
+  margin: 0 10px;
+  transition: 0.5s;
 }
 header .logo img:hover {
   transform: rotate(15deg);
 }
-header .links {
+header .but {
   display: flex;
-  transform: translateX(0px);
+  color: var(--sac-color);
+  background-color: var(--main-color);
+  border-radius: 100px;
+  padding: 5px 10px;
+  font-size: 25px;
+  align-items: center;
+  transition: background-color 0.3s, color 0.3s;
 }
-header .links a {
-  padding: 10px;
+header .icon {
+  background-color: var(--sac-color);
+  border-radius: 100px;
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s, color 0.3s;
 }
-header .links .active,
-header .links a:hover {
-  position: relative;
-  padding: 10px 20px;
+header .icon img {
+  width: 70%;
+}
+header .but:hover {
+  background-color: var(--tx-color);
   color: var(--main-color);
 }
-header .menu,
-header .menu input {
-  display: none;
+header .but:hover .icon {
+  background-color: var(--main-color);
 }
-header .menu {
-  position: absolute;
-  top: 45px;
-  right: 20px;
-  z-index: 5;
+header .but:hover img {
+  filter: brightness(5000%);
 }
 
-header .menu .lines {
-  display: flex;
-  cursor: pointer;
-}
-
-header .menu .lines .svg {
-  width: 40px;
-  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-header .menu .lines .svg .line {
-  fill: none;
-  stroke: white;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 3;
-  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-header .menu .lines .svg .top-bottom {
-  stroke-dasharray: 12 63;
-}
-
-header .menu .lines input:checked + .svg {
-  transform: rotate(-45deg);
-}
-
-header .menu .lines input:checked + .svg .top-bottom {
-  stroke-dasharray: 20 300;
-  stroke-dashoffset: -32.42;
-}
-@media only screen and (max-width: 500px) {
-  header .menu {
-    display: block;
-  }
-  header .links {
-    transform: translateX(350px);
-    position: absolute;
-    right: 50px;
-  }
+@media (max-width: 500px) {
   header .logo img {
-    width: 100px;
+    width: 120px;
+  }
+  header .but {
+    font-size: 20px;
+    padding: 3px 5px;
+  }
+  header .icon img {
+    width: 60%;
   }
 }
 /* section one */
@@ -173,7 +169,6 @@ header .menu .lines input:checked + .svg .top-bottom {
 /* puppels */
 .secone .back img {
   z-index: -3;
-
   position: absolute;
   width: 100px;
   animation: move-up6 2.5s ease-in infinite alternate-reverse;
@@ -204,7 +199,6 @@ header .menu .lines input:checked + .svg .top-bottom {
     transform: translateY(-20px);
   }
 }
-
 @keyframes move-down2 {
   to {
     transform: translateY(30px);
@@ -216,84 +210,65 @@ header .menu .lines input:checked + .svg .top-bottom {
   }
 }
 /* top style for main sec */
+.secone {
+  height: 100vh;
+}
 .secone .top {
+  height: 100%;
+  position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin: 20px 0;
+  align-items: center;
   z-index: 4;
 }
-
-.secone .top .texts {
-  margin-top: 20px;
-  width: 300px;
-  text-align: center;
-}
 .prandname {
-  font-size: 150%;
-}
-.prandname img {
-  position: relative;
-  top: -20px;
-  width: 70%;
-}
-.secone .top .texts .hotline h1 {
-  color: var(--main-color);
-  font-size: 25px;
-  cursor: pointer;
-}
-.secone .top .texts h2 {
-  z-index: 55;
-}
-.secone .top .texts .hotline {
-  padding-right: 10px;
-  transition: 0.5s;
-}
-.secone .top .texts .hotline img {
-  opacity: 0;
   position: absolute;
-  top: 400px;
-  right: 70px;
+  top: 0px;
+  width: 600px;
+  z-index: 11;
+}
+.secone .mainbut {
+  position: absolute;
+  top: 300px;
   width: 200px;
-  z-index: -1;
-  cursor: pointer;
+  z-index: 21;
 }
-.secone .top .texts .hotline img:hover {
-  opacity: 1;
-}
-
-.secone .top .imgs {
-  height: 300px;
-  width: 320px;
-  overflow-y: hidden;
-  border-radius: 20px;
-}
-.secone .top .imgs img {
+.secone .kerep {
+  position: absolute;
+  top: 45px;
+  z-index: 10;
   width: 90%;
-  padding: 10px;
+  max-width: 600px;
 }
-.buttom {
+.secone .kings {
+  width: 90%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
-
-.mainbut {
-  background-color: var(--main-color);
-  color: var(--sac-color);
-  padding: 10px 50px;
-  font-size: 25px;
-  border-radius: 100px;
-  margin: 50px 50px;
-  font-family: 'IBM';
-  border: none;
-  cursor: pointer;
+.secone .kings img {
+  top: 220px;
+  position: absolute;
+  width: 90%;
+  max-width: 800px;
 }
-.mainbut:hover {
-  background-color: var(--tx-color);
-  color: var(--main-color);
-  padding: 10px 50px;
-  font-size: 25px;
-  border-radius: 100px;
-  margin: 50px 50px;
+.secone .kings .b {
+  z-index: 20;
+}
+@media (max-width: 500px) {
+  .secone .kerep {
+    width: 150%;
+  }
+  .secone .kings img {
+    width: 100%;
+  }
+  .secone .kings .b {
+    opacity: 0;
+  }
+  .secone .kings .s {
+    z-index: 20;
+  }
 }
 
 /* ---------------- section scroll products ---------------- */
@@ -415,7 +390,7 @@ footer .links img {
   font-size: 20px;
   margin: 15px 0;
 }
-@media  (max-width: 770px) {
+@media (max-width: 770px) {
   .oneproduct .product {
     flex-direction: column;
   }
@@ -423,4 +398,3 @@ footer .links img {
     width: 80%;
   }
 }
-
