--- a/style.css
+++ b/style.css
@@ -289,6 +289,7 @@ header .but:hover img {
   scrollbar-width: none;
 }
 .scrollprod {
+  height: 600px;
   overflow-x: hidden;
   position: relative;
 }
@@ -307,15 +308,12 @@ header .but:hover img {
 .logoframe::-webkit-scrollbar {
   display: none;
 }
-.bar {
-  overflow-x: hidden;
-}
 .scrollprod .top {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row-reverse;
-  margin-right: 10%;
+  margin-right: 5%;
   text-align: right;
   z-index: 2;
 }
