--- a/style.css
+++ b/style.css
@@ -42,6 +42,23 @@ section {
 .power {
   font-size: 15px;
 }
+.pflag{
+  position: absolute;
+  transform: rotate(90deg);
+  top: 126px;
+  right: 3.6%;
+  width: 100px;
+  z-index: 20;
+}
+@media (max-width: 500px){
+  .pflag{
+    position: absolute;
+    transform: rotate(90deg);
+    top: 102px;
+    right: 6.6%;
+    width: 70px;
+  }
+}
 #preloader {
   position: fixed;
   display: flex;
@@ -97,6 +114,19 @@ section {
   border-radius: 100px;
   margin: 50px 50px;
 }
+.alert{
+  position: fixed;
+  top: 150px;
+  right: 20px;
+  display: flex;
+  z-index: 1000;
+  border-radius: 20px;
+  border-bottom: solid var(--main-color);
+  padding: 10px 20px;
+  background-color: #5e452b;
+  transform: translate(400px);
+  transition: .5s;
+}
 /* -------------------- header -------------------- */
 header {
   padding: 10px 3%;
@@ -105,6 +135,7 @@ header {
   justify-content: space-between;
   font-size: 25px;
   overflow-x: hidden;
+  z-index: 100;
 }
 header .logo img {
   width: 150px;
@@ -125,7 +156,21 @@ header .but {
   align-items: center;
   transition: background-color 0.3s, color 0.3s;
 }
+#cartball{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: -13px;
+  left: -9px;
+  width: 25px;
+  height: 25px;
+  font-size: 17px;
+  border-radius: 100px;
+  background-color: var(--tx-color);
+}
 header .icon {
+  position: relative;
   background-color: var(--sac-color);
   border-radius: 100px;
   width: 35px;
@@ -160,6 +205,9 @@ header .but:hover img {
   }
   header .icon img {
     width: 60%;
+  }
+  #cartball{
+    transform: scale(.8);
   }
 }
 /* section one */
